media: Properly tell whether the buffer is encrypted

We need to call MediaCodec method queueSecureInputBuffer()
instead of queueInputBuffer() only if both the key and the
initialization vector are not empty.

BUG=605341

Review URL: https://codereview.chromium.org/1912213002

Cr-Commit-Position: refs/heads/master@{#389229}

Former-commit-id: 100cc77fa6654a0198561e6621f6bf10fa9adc3f